--- a/AngularShop/src/app/navbar/navbar.component.html
+++ b/AngularShop/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-2">
     <div class="container">
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav"
             aria-label="Expand Navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
