--- a/AngularShop/src/app/shop/shop.component.html
+++ b/AngularShop/src/app/shop/shop.component.html
@@ -126,6 +126,12 @@
                                   Product ID
                                 </label>
                               </div>
+                              <div onclick="event.stopPropagation();">
+                                <label class="dropdown-item">
+                                  <input class="form-check-input me-1" type="radio" name="sortOptions" value="date" id="sortDate">
+                                  Date
+                                </label>
+                              </div>
                             </ul>
                           </li>
                         </ul>
