--- a/AngularShop/src/app/cart/cart.component.html
+++ b/AngularShop/src/app/cart/cart.component.html
@@ -19,7 +19,7 @@
                 alt="Product Image" class="img-fluid">
             </div>
             <div class="col-md-4">
-              <h5 class="card-title"> <a [href]="['/product/']+'item.product.productId'" style="text-decoration:none; color: inherit;">{{item.product.productId}} - {{item.product.productName}}</a></h5>
+              <h5 class="card-title"> <a [href]="['/product/'+item.product.productId]" style="text-decoration:none; color: inherit;">{{item.product.productId}} - {{item.product.productName}}</a></h5>
               <p class="card-text text-muted">{{item.product.weight}}</p>
             </div>
             <div class="col-md-2">
