--- a/AngularShop/src/app/cart/cart.component.html
+++ b/AngularShop/src/app/cart/cart.component.html
@@ -13,7 +13,7 @@
 
         <div class="card-body">
           <div class="row align-items-center">
-            <div class="col-md-3 d-flex justify-content-center align-items-center"  [routerLink]="['/product/']+'item.product.productId'">
+            <div class="col-md-3 d-flex justify-content-center align-items-center"  [routerLink]="['/product/'+item.product.productId]">
               <img src="https://achau.ch/api/images/products/thumbnails/tn_{{item.product.productId}}.jpg"
                 onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/No-Image-Placeholder.svg/330px-No-Image-Placeholder.svg.png'"
                 alt="Product Image" class="img-fluid">
